Jumbo build fix: rename ToRtcOptinoal to ToRtcOptionalBool

There are two ToRtcOptinlal functions in the same jumbo build group,
and it breaks jumbo builders.

Bug: 834162
Change-Id: Id37adc6bef5ce4d0e38b8e564f3998d27084a53d
Tbr: sergeyu@chromium.org
Reviewed-on: https://chromium-review.googlesource.com/1016217
Reviewed-by: Takashi Toyoshima <toyoshim@chromium.org>
Commit-Queue: Takashi Toyoshima <toyoshim@chromium.org>
Cr-Commit-Position: refs/heads/master@{#551607}
Former-commit-id: 58c15949898bf4e163069c1ed7128bbbbe012faa