content/renderer/media/webrtc/media_stream_video_webrtc_sink.cc
@@ -28,7 +28,7 @@ namespace content {
 
 namespace {
 
-rtc::Optional<bool> ToRtcOptional(const base::Optional<bool>& value) {
+rtc::Optional<bool> ToRtcOptionalBool(const base::Optional<bool>& value) {
   return value ? rtc::Optional<bool>(*value) : rtc::Optional<bool>();
 }
 
@@ -270,7 +270,8 @@ MediaStreamVideoWebRtcSink::MediaStreamVideoWebRtcSink(
   DCHECK(video_track);
 
   rtc::Optional<bool> needs_denoising =
-      ToRtcOptional(video_track->noise_reduction());
+      ToRtcOptionalBool(video_track->noise_reduction());
+
   bool is_screencast = video_track->is_screencast();
   base::Optional<double> min_frame_rate = video_track->min_frame_rate();
   base::Optional<double> max_frame_rate = video_track->max_frame_rate();
